# example_fastapi

./: .env-sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 3ebd824839e0_create_sensor_table.py
app/: api.py  crud.py  database.py  main.py  models.py  schemas.py  sensors.py
docker/nginx/: Dockerfile  nginx.conf
tests/: fixtures.py  test_sensors.py
