[tool.poetry]
name = "Example Application"
version = "0.1.0"
description = "An example, to serve as a template."
authors = ["Claudine Chen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.103.0"
pydantic = "2.3.0"
python-multipart = "^0.0.6"
uvicorn = "^0.23.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
flake8 = "6.1.0"
isort = "^5.12.0"
pre-commit = "2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
