[tool.poetry]
name = "Example Application"
version = "0.1.0"
description = "An example, to serve as a template."
authors = ["Claudine Chen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.103.0"
pydantic = "2.3.0"
python-multipart = "^0.0.6"
uvicorn = "^0.23.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
alembic = "^1.11.3"
sqlalchemy-utils = "^0.41.1"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
flake8 = "6.1.0"
isort = "^5.12.0"
pre-commit = "2.21.0"
pytest = "^7.4.0"
pytest-dotenv = "^0.5.2"
responses = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
